tests/miniJava/neg/000599_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class java { } new int [ 0 ] ; } }
